<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My First App</string>
    <string name="first_name">First Name</string>
    <string name="surname">Surname</string>
    <string name="save_customer">Save Customer</string>
    <string name="new_customer_title">New Customer</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="title_activity_display_message">DisplayMessageActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

</resources>
